--- a/package.json
+++ b/package.json
@@ -9,14 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.187",
     "@types/node": "18.11.9",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "@types/tunnel": "^0.0.3",
+    "cheerio": "1.0.0-rc.12",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.0.0",
+    "graphql-scalars": "^1.20.0",
+    "graphql-yoga": "3.0.0-next.9",
+    "https-proxy-agent": "^5.0.1",
+    "lodash": "^4.17.21",
     "next": "13.0.1",
+    "playwright-chromium": "^1.27.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^1.3.0",
     "typescript": "4.8.4"
   }
 }
