--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,4 +37,4 @@ jobs:
           push: true
           tags: |
             ${{ env.REGISTRY }}/${{ github.repository }}:latest
-            ${{ env.REGISTRY }}/${{ github.repository }}:${{ IMAGE_TAG }}
+            ${{ env.REGISTRY }}/${{ github.repository }}:${{ env.IMAGE_TAG }}
