--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,6 +38,7 @@ jobs:
             ${{ env.REGISTRY }}/${{ github.repository }}:latest
             ${{ env.REGISTRY }}/${{ github.repository }}:${{ env.IMAGE_TAG }}
   deploy:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Deploy package to vps
@@ -49,7 +50,8 @@ jobs:
           host: ${{ secrets.DEPLOY_HOST }}
           port: ${{ secrets.DEPLOY_PORT }}
           username: ${{ secrets.DEPLOY_USER }}
-          key: ${{ secrets.DEPLOY_KEY }}
+          password: ${{ secrets.DEPLOY_PW }}
+          # key: ${{ secrets.DEPLOY_KEY }}
           # envs: GITHUB_USERNAME, GITHUB_TOKEN
           script: |
             docker pull ${{ env.REGISTRY }}/${{ github.repository }}:${{ env.IMAGE_TAG }}
