--- a/package.json
+++ b/package.json
@@ -29,5 +29,10 @@
     "react-dom": "18.2.0",
     "swr": "^1.3.0",
     "typescript": "4.8.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.2"
   }
 }
