--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "graphql-scalars": "^1.20.0",
     "graphql-yoga": "3.0.0-next.9",
     "https-proxy-agent": "^5.0.1",
+    "iconv-lite": "^0.6.3",
     "lodash": "^4.17.21",
     "next": "13.0.1",
     "playwright-chromium": "^1.27.1",
