--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "graphql-yoga": "3.0.0-next.9",
     "https-proxy-agent": "^5.0.1",
     "iconv-lite": "^0.6.3",
+    "jsdom": "^22.1.0",
     "lodash": "^4.17.21",
     "next": "13.0.1",
     "playwright-chromium": "^1.27.1",
@@ -33,6 +34,7 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@types/jsdom": "^21.1.1",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.2"
