--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/tunnel": "^0.0.3",
     "cheerio": "1.0.0-rc.12",
     "daisyui": "^2.40.1",
+    "dayjs": "^1.11.8",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
     "graphql": "^16.6.0",
