Update docker system prune command

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -55,5 +55,5 @@ jobs:
           script: |
             docker pull ${{ env.REGISTRY }}/${{ github.repository }}:${{ env.IMAGE_TAG }}
             docker stop ${{ secrets.DEPLOY_CONTAINER_NAME }}
-            docker system prune -f
+            docker system prune -af
             docker run --name ${{ secrets.DEPLOY_CONTAINER_NAME }} -d -p ${{ secrets.DEPLOY_CONTAINER_PORT_OUTTER }}:${{ secrets.DEPLOY_CONTAINER_PORT_INNER }} ${{ env.REGISTRY }}/${{ github.repository }}:${{ env.IMAGE_TAG }}
